Bad keying in NLA #45864

Closed
opened 2015-08-21 11:46:02 +02:00 by Cenek Strichel · 6 comments

System Information
W10 64b

Blender Version
10edaff

Short description of error
If you change Influence of NLA Action clip it is keying on bad Action. Also If you change Influence in F-Curve slider it keys all actions with auto key.

Exact steps for others to reproduce the error

  1. open nlabug.blend
  2. Select Action2 in NLA
  3. change Influence
  4. Influence of Action1 is keyed not Action2

similar bug:

  1. Change value Influence in fCurve Editor with slider
  2. Both Influences are keyed

PS:
If I move with Action strip, Influence curve and Strip time curve stay on old position. Is is design? If it is design it is not good idea, because you have to still modify your Influence curve with any move of Action.

**System Information** W10 64b **Blender Version** 10edaff **Short description of error** If you change Influence of NLA Action clip it is keying on bad Action. Also If you change Influence in F-Curve slider it keys all actions with auto key. **Exact steps for others to reproduce the error** 1) open [nlabug.blend](https://archive.blender.org/developer/F226134/nlabug.blend) 2) Select Action2 in NLA 3) change Influence 4) Influence of Action1 is keyed not Action2 similar bug: 1) Change value Influence in fCurve Editor with slider 2) Both Influences are keyed PS: If I move with Action strip, Influence curve and Strip time curve stay on old position. Is is design? If it is design it is not good idea, because you have to still modify your Influence curve with any move of Action.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Cenda

Added subscriber: @Cenda
Joshua Leung self-assigned this 2015-08-21 13:22:06 +02:00
Member

Ack! Confirmed :(

Ack! Confirmed :(
Member

After some investigating, it seems that the problem with the graph editor sliders only occurs when autokeying is enabled.

Specifically, it seems that ui_but_get_fcurve() -> rna_get_fcurve_context_ui() is finding the wrong curve

After some investigating, it seems that the problem with the graph editor sliders only occurs when autokeying is enabled. Specifically, it seems that ui_but_get_fcurve() -> rna_get_fcurve_context_ui() is finding the wrong curve

This issue was referenced by b617dec065

This issue was referenced by b617dec0659630c17d37567f1e6a7ea2136cc5f5
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45864
No description provided.